[package]
name = "psmem"
version = "0.1.0"
authors = ["Jakub Matys <matys.jakub@gmail.com>"]
categories = ["command-line-utilities"]
edition = "2018"
readme = "README.md"
repository = "https://github.com/jakm/psmem"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.5"
lazy_static = "1.4.0"
procfs = { version = "0.14.1" }
rayon = "1.6.0"
regex = "1"
