[package]
name = "psmem"
version = "0.1.0"
authors = ["Jakub Matys <matys.jakub@gmail.com>"]
categories = ["command-line-utilities"]
edition = "2021"
readme = "README.md"
repository = "https://github.com/jakm/psmem"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
itertools = "0.10.5"
lazy_static = "1.4.0"
procfs = { version = "0.18.0" }
rayon = "1.6.0"
regex = "1"

[profile.samply]
inherits = "release"
debug = true
